# film-planning

./: .coverage  README.md  app.py  cli.py  main.py  pyproject.toml
src/film_scheduler/: models.py  scheduler.py
tests/: test_models.py  test_scheduler.py
